--- a/packages/.gitignore
+++ b/packages/.gitignore
@@ -12,3 +12,18 @@ typeahead-js
 bootstrap-datetimepicker
 jquery-rateit
 npm
+/bootstrap-3
+/font-awesome-4
+/iron-router
+/parsleyjs
+/moment
+/bootstrap-datepicker2
+/leaflet-0.6.4
+/underscore-string-latest
+/bootstrap-datetimepicker
+/jquery-rateit
+/npm
+/autocomplete
+/typeahead
+/Bootstrap3-Typeahead
+/bootstrap3-datetimepicker
